@@ -74,6 +74,11 @@ end_include
 begin_include
 include|#
 directive|include
+file|<private/qguiapplication_p.h>
+end_include
+begin_include
+include|#
+directive|include
 file|<qpa/qwindowsysteminterface.h>
 end_include
 begin_include
@@ -6298,6 +6303,61 @@ name|m_data
 operator|.
 name|hwnd
 condition|)
+block|{
+name|QString
+name|fullTitle
+init|=
+name|title
+decl_stmt|;
+if|if
+condition|(
+name|QGuiApplicationPrivate
+operator|::
+name|displayName
+condition|)
+block|{
+comment|// Append display name, if set.
+if|if
+condition|(
+operator|!
+name|fullTitle
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+name|fullTitle
+operator|+=
+name|QStringLiteral
+argument_list|(
+literal|" - "
+argument_list|)
+expr_stmt|;
+name|fullTitle
+operator|+=
+operator|*
+name|QGuiApplicationPrivate
+operator|::
+name|displayName
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|fullTitle
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+comment|// Don't let the window title be completely empty, use the app name as fallback.
+name|fullTitle
+operator|=
+name|QCoreApplication
+operator|::
+name|applicationName
+argument_list|()
+expr_stmt|;
+block|}
 name|SetWindowText
 argument_list|(
 name|m_data
@@ -6309,12 +6369,13 @@ specifier|const
 name|wchar_t
 operator|*
 operator|)
-name|title
+name|fullTitle
 operator|.
 name|utf16
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 end_function
 begin_function
