@@ -5846,10 +5846,68 @@ modifier|&
 name|title
 parameter_list|)
 block|{
+name|QString
+name|fullTitle
+init|=
+name|title
+decl_stmt|;
+if|if
+condition|(
+name|QGuiApplicationPrivate
+operator|::
+name|displayName
+condition|)
+block|{
+comment|// Append display name, if set.
+if|if
+condition|(
+operator|!
+name|fullTitle
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+name|fullTitle
+operator|+=
+name|QString
+operator|::
+name|fromUtf8
+argument_list|(
+literal|" \xe2\x80\x94 "
+argument_list|)
+expr_stmt|;
+comment|// unicode character U+2014, EM DASH
+name|fullTitle
+operator|+=
+operator|*
+name|QGuiApplicationPrivate
+operator|::
+name|displayName
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|fullTitle
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+comment|// Don't let the window title be completely empty, use the app name as fallback.
+name|fullTitle
+operator|=
+name|QCoreApplication
+operator|::
+name|applicationName
+argument_list|()
+expr_stmt|;
+block|}
+specifier|const
 name|QByteArray
 name|ba
 init|=
-name|title
+name|fullTitle
 operator|.
 name|toUtf8
 argument_list|()
