@@ -19730,81 +19730,7 @@ name|resolveLocale
 argument_list|()
 expr_stmt|;
 block|}
-DECL|function|constructWindowTitleFromFilePath
-specifier|static
-name|QString
-name|constructWindowTitleFromFilePath
-parameter_list|(
-specifier|const
-name|QString
-modifier|&
-name|filePath
-parameter_list|)
-block|{
-name|QFileInfo
-name|fi
-argument_list|(
-name|filePath
-argument_list|)
-decl_stmt|;
-name|QString
-name|windowTitle
-init|=
-name|fi
-operator|.
-name|fileName
-argument_list|()
-operator|+
-name|QLatin1String
-argument_list|(
-literal|"[*]"
-argument_list|)
-decl_stmt|;
-ifndef|#
-directive|ifndef
-name|Q_WS_MAC
-name|QString
-name|appName
-init|=
-name|QApplication
-operator|::
-name|applicationName
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-operator|!
-name|appName
-operator|.
-name|isEmpty
-argument_list|()
-condition|)
-name|windowTitle
-operator|+=
-name|QLatin1Char
-argument_list|(
-literal|' '
-argument_list|)
-operator|+
-name|QChar
-argument_list|(
-literal|0x2014
-argument_list|)
-operator|+
-name|QLatin1Char
-argument_list|(
-literal|' '
-argument_list|)
-operator|+
-name|appName
-expr_stmt|;
-endif|#
-directive|endif
-return|return
-name|windowTitle
-return|;
-block|}
-comment|/*!     \property QWidget::windowTitle     \brief the window title (caption)      This property only makes sense for top-level widgets, such as     windows and dialogs. If no caption has been set, the title is based of the     \l windowFilePath. If neither of these is set, then the title is     an empty string.      If you use the \l windowModified mechanism, the window title must     contain a "[*]" placeholder, which indicates where the '*' should     appear. Normally, it should appear right after the file name     (e.g., "document1.txt[*] - Text Editor"). If the \l     windowModified property is false (the default), the placeholder     is simply removed.      \sa windowIcon, windowIconText, windowModified, windowFilePath */
+comment|/*!     \property QWidget::windowTitle     \brief the window title (caption)      This property only makes sense for top-level widgets, such as     windows and dialogs. If no caption has been set, the title is based of the     \l windowFilePath. If neither of these is set, then the title is     an empty string.      If you use the \l windowModified mechanism, the window title must     contain a "[*]" placeholder, which indicates where the '*' should     appear. Normally, it should appear right after the file name     (e.g., "document1.txt[*] - Text Editor"). If the \l     windowModified property is false (the default), the placeholder     is simply removed.      On some desktop platforms (including Windows and Unix), the application name     (from QGuiApplication::applicationDisplayName) is added at the end of the     window title, if set. This is done by the QPA plugin, so it is shown to the     user, but isn't part of the \l windowTitle string.      \sa windowIcon, windowIconText, windowModified, windowFilePath */
 DECL|function|windowTitle
 name|QString
 name|QWidget
@@ -19870,7 +19796,7 @@ name|isEmpty
 argument_list|()
 condition|)
 return|return
-name|constructWindowTitleFromFilePath
+name|QFileInfo
 argument_list|(
 name|d
 operator|->
@@ -19879,6 +19805,14 @@ operator|->
 name|topextra
 operator|->
 name|filePath
+argument_list|)
+operator|.
+name|fileName
+argument_list|()
+operator|+
+name|QLatin1String
+argument_list|(
+literal|"[*]"
 argument_list|)
 return|;
 block|}
@@ -20604,7 +20538,7 @@ name|QString
 argument_list|()
 return|;
 block|}
-comment|/*!     \property QWidget::windowFilePath     \since 4.4     \brief the file path associated with a widget      This property only makes sense for windows. It associates a file path with     a window. If you set the file path, but have not set the window title, Qt     sets the window title to contain a string created using the following     components.      On Mac OS X:      \list     \li The file name of the specified path, obtained using QFileInfo::fileName().     \endlist      On Windows and X11:      \list     \li The file name of the specified path, obtained using QFileInfo::fileName().     \li An optional \c{*} character, if the \l windowModified property is set.     \li The \c{0x2014} unicode character, padded either side by spaces.     \li The application name, obtained from the application's     \l{QCoreApplication::}{applicationName} property.     \endlist      If the window title is set at any point, then the window title takes precedence and     will be shown instead of the file path string.      Additionally, on Mac OS X, this has an added benefit that it sets the     \l{http://developer.apple.com/documentation/UserExperience/Conceptual/OSXHIGuidelines/XHIGWindows/chapter_17_section_3.html}{proxy icon}     for the window, assuming that the file path exists.      If no file path is set, this property contains an empty string.      By default, this property contains an empty string.      \sa windowTitle, windowIcon */
+comment|/*!     \property QWidget::windowFilePath     \since 4.4     \brief the file path associated with a widget      This property only makes sense for windows. It associates a file path with     a window. If you set the file path, but have not set the window title, Qt     sets the window title to the file name of the specified path, obtained using     QFileInfo::fileName().      If the window title is set at any point, then the window title takes precedence and     will be shown instead of the file path string.      Additionally, on Mac OS X, this has an added benefit that it sets the     \l{http://developer.apple.com/documentation/UserExperience/Conceptual/OSXHIGuidelines/XHIGWindows/chapter_17_section_3.html}{proxy icon}     for the window, assuming that the file path exists.      If no file path is set, this property contains an empty string.      By default, this property contains an empty string.      \sa windowTitle, windowIcon */
 DECL|function|windowFilePath
 name|QString
 name|QWidget
